@@ -12,6 +12,9 @@ Changes in 0.50.8:
   * 'cvc cook' error output when there are unresolved build
     requirements is more user friendly
   * filesystem conflicts are handled properly when applying a rollback
+  * updating a package to a version that comes from a different
+    repository when that package had an uninstalled component works
+    now.
 
 Changes in 0.50.7:
   * Added the XInetdService action to avoid having to include
